# omniorb

./: CMakeLists.txt
omniORB-4.2.3/: config.status
omniORB-4.2.3/contrib/pkgconfig/: omniCOSDynamic4.pc  omniConnectionMgmt4.pc  omniORB4.pc  omniZIOP4.pc  omniZIOPDynamic4.pc  omnithread3.pc
omniORB-4.2.3/include/omniORB4/: acconfig.h
omniORB-4.2.3/lib/: libCOS4.so.2  libCOSDynamic4.so.2  libomniConnectionMgmt4.so.2  libomniZIOP4.so.2.3  libomnithread.so.4
omniORB-4.2.3/mk/: beforeauto.mk
omniORB-4.2.3/src/appl/omniMapper/: omniMapper
omniORB-4.2.3/src/appl/utils/convertior/: convertior
omniORB-4.2.3/src/lib/omniORB/codesets/shared/: libomniCodeSets4.so.2.3
omniORB-4.2.3/src/lib/omnithread/: posix.d
omniORB-4.2.3/src/lib/omnithread/shared/: libomnithread.so.4.1
omniORB-4.2.3/src/services/mklib/: CosEventChannelAdminSK.d  CosEventCommSK.d  CosNotificationDynSK.d  CosNotificationSK.d  CosNotifyCommDynSK.d  CosNotifyFilterSK.d  TimeBaseSK.d
omniORB-4.2.3/src/services/mklib/dynstublib/: CosEventChannelAdminDynSK.d  CosNotifyCommDynSK.d  CosNotifyFilterDynSK.d  TimeBaseDynSK.d
omniORB-4.2.3/src/services/mklib/stublib/: CosEventCommSK.d  CosNotificationSK.d  TimeBaseSK.d
omniORB-4.2.3/src/tool/omniidl/cxx/: idlpython.d
raw/omniORB-4.2.3/lib/: libCOS4.so.2.3  libomniConnectionMgmt4.so.2.3  libomniDynamic4.so.2  libomniZIOP4.so.2  omnicpp
raw/omniORB-4.2.3/src/appl/omniNames/: omniNames
raw/omniORB-4.2.3/src/services/mklib/: CosEventChannelAdminDynSK.d  CosEventCommDynSK.d  CosNotifyCommSK.d  CosNotifyFilterDynSK.d  TimeBaseDynSK.d
(+14 files in other folders)
